--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,8 @@
-/*
-Teal color (used for headings and backgrounds): #4aaaa5
-
-Profile Image Found on index.html
-
-Use a picture of yourself.
-If you don't have a picture, you can grab a placeholder image from LoremPixel. Save the images to your images folder
-Portfolio Images
-
-Placeholder images can be found LoremPixel.
-Save the images to your images folder
-Social Link Images (Github, LinkedIn and StackOverflow, etc.)
-
-These images can be found on IconFinder.
-Save the images to your images folder
-Background Images
-
-The background pattern used was found on Subtle Patterns. You can browse through that site and find whichever pattern you like.
-Dimensions
-
-The main section content is 650px wide.
-The sidebar is 270px wide.
-Pro-tip. Use the Page Ruler extension to measure the size of elements
-Bonus
-
-Make your pages more sophisticated by adding style to text links, image links and buttons for when a user hovers their cursor over them. A CSS hover tutorial can be found here.
-
-You can use Adobe Kuler to find colors that match the theme (In this case, the primary color is Teal #4aaaa5).
-
-Make a 'sticky footer.' You will notice the dark grey footer will always rest just below the content. This is fine whenever your site has enough content to push it down past the height of most honitors. But if there isn't much content in the body, the footer could rest in the middle of the page:
-*/
 body p {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
+    line-height: 1.5;
+    
 }
 
 a { 
@@ -45,6 +16,7 @@ a:hover {
 
 #wrapper {
     clear: both;
+    overflow: auto;
     position:relative;
     border-style:solid;
     border-color: #dddddd;
@@ -83,30 +55,28 @@ h1 {
 
 ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
 }
 
 li {
     float: left;
     display: inline;
-    margin: 30px;
+    margin: 20px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;   
 }
 
 #maincontent {
     float:left;
-    width: 650px; 
+    width: 630px; 
     background-color: #ffffff;
     border: 1px solid #dddddd;
-    margin: 30px 0 30px 30px;
+    margin: 10px 0px 10px 10px;
     padding: 10px;
 }
 
 #sidebar {
     float: right;
-    width: 240px;
-    margin: 30px 0 0 0;
+    width: 270px;
+    margin: 10px;
     padding: 5px 0 20px 0;
     text-align: center;
     background: #ffffff;
@@ -129,12 +99,12 @@ li {
 }
 
 footer {
+    clear:both;
     position:sticky;
-    top: 0;
-    clear: both;
+    width: 100%;
     background: #666666;
     text-align: center;
-    padding:15px;
+    padding:20px 0 20px 0;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #4aaaa5;   
     border-top: 5px solid #4aaaa5;
@@ -145,17 +115,25 @@ footer {
 }
 
 h2 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-weight: bold;
+    font-size: 20pt;    
     color: #4aaaa5;
     border-bottom: 1px solid #4aaaa5;
     margin: 10px;
     padding: 10px;
+    text-align: left;
 }
 
 h3 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-weight: bold;
+    font-size: 14pt;    
     color: #4aaaa5;
     border-bottom: 1px solid #4aaaa5;
     margin: 10px;
     padding: 10px;
+    text-align: left;
 }
 
 #socialphoto {
