--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,13 @@ li {
 
 #maincontent {
     float:left;
+    /*overflow: auto;*/
     width: 630px; 
     background-color: #ffffff;
     border: 1px solid #dddddd;
     margin: 10px 0px 10px 10px;
     padding: 10px;
+    /*height:600px;*/
 }
 
 #sidebar {
@@ -99,12 +101,12 @@ li {
 }
 
 footer {
-    clear:both;
-    position:sticky;
+    clear: both;
+    position: sticky;
     width: 100%;
     background: #666666;
     text-align: center;
-    padding:20px 0 20px 0;
+    padding: 20px 0 20px 0;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #dddddd;   
     border-top: 5px solid #4aaaa5;
@@ -182,8 +184,8 @@ textarea {
 }
 
 #submitButton {
-    width:100px;
+    width: 100px;
     background-color: #4aaaa5;
-    color:#dddddd;
+    color: #dddddd;
     border: 1px solid #4aaaa5;
 }
