--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
-body p {
+body {
+    background-image: url("../images/cork-wallet.png");
+}
+
+p {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
     line-height: 1.5; 
@@ -19,16 +23,24 @@ a:hover {
     position:relative;
     border-style:solid;
     border-color: #dddddd;
-    background-image: url("../images/cork-wallet.png");
     width: 960px;
     margin: auto;
 }
 
 header {
-    width: 960px;
-    background: #ffffff;
+    width: 100%;
+    background-color: #ffffff;
+	height: 100px;
     margin: auto;
+    border-bottom: 2px solid #dddddd;
+    align-content: center;
 }
+
+#innerHeader {
+    width: 960px;
+    margin:auto;
+}
+
 
 h1 {
     float: left;
@@ -37,18 +49,21 @@ h1 {
     font-size: 24pt;
     background: #4aaaa5;
     color: #ffffff;
-    border: 1px solid #4aaaa5;
     text-align: center;
-    margin: 0px 0px 0px 20px;
-    padding: 20px;
-    width: 33.3%; 
-   
+    /*margin: 0px 0px 0px 20px;*/
+	margin-left: 20px;
+	height: 30px;
+    /*padding: 20px;*/
+    width: 300px; 
+    position: relative;
+    bottom:-20px;
+    padding:25px;
 }
 
 #headerNav {
     float: right;
     padding: 0px;
-    margin: 0 0 0 0;
+    margin: 20px 20px 0 0;
 }
 
 
@@ -70,7 +85,7 @@ li {
     width: 630px; 
     background-color: #ffffff;
     border: 1px solid #dddddd;
-    margin: 10px 0px 10px 10px;
+    margin: 20px 0px 20px 10px;
     padding: 10px;
     /*height:600px;*/
 }
@@ -78,7 +93,7 @@ li {
 #sidebar {
     float: right;
     width: 270px;
-    margin: 10px;
+    margin: 20px 0px 0px 0px;
     padding: 5px 0 20px 0;
     text-align: center;
     background: #ffffff;
@@ -102,14 +117,17 @@ li {
 
 footer {
     clear: both;
-    position: sticky;
+    position: absolute;
+    bottom: 0px;
     width: 100%;
+    height: 20px;
+    margin: 0 auto;     
     background: #666666;
-    text-align: center;
-    padding: 20px 0 20px 0;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #dddddd;   
-    border-top: 5px solid #4aaaa5;
+    text-align: center;
+    padding: 40px 0 40px 0;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    border-top: 5px solid #4aaaa5;  
 }
 
 .clearfix {
